--- a/css/new_b.css
+++ b/css/new_b.css
@@ -5,7 +5,7 @@
 }
 
 #toc ul li ul a, #toc ul li ul a:link, #toc ul li ul a:visited {
-    color: #505050;
+    color: #404040;
     background: #ffffff;
 }
 
